Git status does not generate index.lock

The git option (Note: not git status) --no-optional-locks prohibits the generation
of the lockfile in read-only operation, thus not blocking other e.g. manually typed commands.

https://bugs.kde.org/show_bug.cgi?id=363576

BUG: 363576